--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "streams-info",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://jenghissb.github.io/setsonstream",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
