update for change

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "streams-info",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://jenghissb.github.io/setsonstream",
+  "homepage": "https://setsonstream.tv",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
