--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
+    "nth-check": "^2.1.1",
     "pako": "^2.1.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.6.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "8.4.38"
   },
   "scripts": {
     "predeploy": "npm run build",
