--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.2.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -17,10 +18,12 @@
     "pako": "^2.1.0",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-helmet-async": "^2.0.5",
     "react-leaflet": "^5.0.0-rc.2",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "^5.0.1",
+    "react-window": "^1.8.11",
     "web-vitals": "^2.1.4"
   },
   "overrides": {
@@ -32,6 +35,7 @@
     "deploy": "gh-pages -d build --cname setsonstream.tv",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
