--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: Build + Generate
-        run: npm run predeploy
+        run: CI=false npm run predeploy
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
