--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "brotli-dec-wasm": "^2.3.0",
     "firebase": "^11.9.1",
     "leaflet": "^1.9.4",
     "nth-check": "^2.1.1",
