--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,19 @@ jobs:
       - name: Build + Generate
         run: CI=false npm run predeploy
 
+      - name: Commit and push specific LFS file changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add data/dataArchive.json.br
+          if git diff-index --quiet HEAD; then
+            echo "No changes in data/dataArchive.json.br to commit. Exiting."
+          else
+            git commit -m "Auto-generated update to dataArchive.json.br from cron job"
+            git push
+            echo "Changes in data/dataArchive.json.br committed and pushed."
+          fi
+
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
